# galeria

src/: Makefile.am  Makefile.in  fotel.cpp  fotel.h  galeria.cpp  jarekAndRobertProject.bpr  kolor.cpp  kolor.h  kolumna.cpp  kolumna.h  kufer.cpp  kufer.h  kula.cpp  kula.h  obiekt3d.cpp  obiekt3d.h  obraz.cpp  obraz.h  okrag.cpp  okrag.h  punkt.cpp  punkt.h  resztki.txt  sciana.cpp  sciana.h  spodek.cpp  spodek.h  studzienka.cpp  studzienka.h  swiat.cpp  swiat.h  szafa.cpp  szafa.h  szescian.cpp  szescian.h  tekstury.cpp  tekstury.h  walec.cpp  walec.h
