bin_PROGRAMS = galeria
galeria_SOURCES = galeria.cpp kolor.cpp punkt.cpp sciana.cpp szescian.cpp \
						kula.cpp tekstury.cpp swiat.cpp spodek.cpp obiekt3d.cpp okrag.cpp walec.cpp \
				fotel.cpp obraz.cpp szafa.cpp korespondencja kolumna.cpp kufer.cpp studzienka.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
galeria_LDFLAGS = $(all_libraries) 
noinst_HEADERS = kolor.h punkt.h sciana.h szescian.h kula.h swiat.h spodek.h \
				obiekt3d.h okrag.h walec.h fotel.h obraz.h szafa.h kolumna.h kufer.h
